--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "NODE_ENV=production node ./src/server.js",
     "start:dev": "nodemon ./src/server.js",
     "lint": "eslint ./src",
-    "migrate": "node-pg-migrate up",
-    "newman": "newman run ./postman/Open-Music-API-V3-Test.postman_collection.json --environment ./postman/Open-Music-API-Test.postman_environment.json"
+    "migrate": "node-pg-migrate up"
   },
   "keywords": [],
   "author": "",
